<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btn_start">START</string>
    <string name="btn_to_summary">TO SUMMARY</string>

    <string name="title_label">Welcome to the Games Rating app!</string>
    <string name="intruction_label">Click START to start rating :)</string>
    <string name="rate_label">Rate the following game from 1 to 5 stars!</string>
    <string name="random_game_label"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_start_over">Start over</string>
    />
</resources>